All the components

--- a/src/components/Navbar1.css
+++ b/src/components/Navbar1.css
@@ -14,7 +14,7 @@
 }
 
 .navbar .button{
-    background-color: #c9d1d9;
+    /* background-color: #c9d1d9; */
     font-size: 20px;
     font-weight: 700;
     border-radius: 5px;
